@@ -124,46 +124,43 @@ function AppLoader(appLoaderOpts, errEmitter) {
 				id: appId,
 				name: fileApp.name,
 			}
-			var stateNo = states.indexOf(fileApp.state)
-			o.state = states[stateNo !== -1 ? stateNo : 0]
-			o.folder = path.resolve(appLoaderOpts.parentFolder, String(fileApp.folder || o.id))
-			if (Array.isArray(fileApp.start)) {
-				o.start = []
-				fileApp.start.forEach(function (v) {
-					o.start.push(String(v))
-				})
-			} else o.start = ['node', o.folder + '/app']
-			if (Array.isArray(fileApp.debug)) {
-				o.debug = []
-				fileApp.debug.forEach(function (v) {
-					o.debug.push(String(v))
-				})
-			} else o.debug = ['node', '--debug-brk', o.folder + '/app']
-			if (typeof fileApp.watchFiles === 'string' || fileApp.watchFiles instanceof RegExp) o.watchFiles = [fileApp.watchFiles]
-			else {
-				o.watchFiles = []
-				if (Array.isArray(fileApp.watchFiles))
-					fileApp.watchFiles.forEach(function (v) {
-						if (v instanceof RegExp) o.watchFiles.push(v)
-						else o.watchFiles.push(String(v))
-					})
-			}
-			o.watchFileExclude = []
-			if (Array.isArray(fileApp.watchFileExclude)) {
-				fileApp.watchFileExclude.forEach(function (v) {
-					o.watchFileExclude.push(String(v))
-				})
-			}
+
+			o.state = states[fileApp.state || 0] ||  states[0]
+
+			o.folder = path.resolve(appLoaderOpts.parentFolder, String(fileApp.folder || o.id)) // absolute path
+
+			o.start = Array.isArray(fileApp.start) ? fileApp.start.map(makeString) :
+				['node', path.join(o.folder, 'app')]
+
+			o.debug = Array.isArray(fileApp.debug) ? fileApp.debug.map(makeString) :
+				['node', '--debug-brk', path.join(o.folder, 'app')]
+
+			o.watchFiles = typeof fileApp.watchFiles === 'string' || fileApp.watchFiles instanceof RegExp ? [fileApp.watchFiles] :
+				Array.isArray(fileApp.watchFiles) ? fileApp.watchFiles.map(makeStringOrRegExp) :
+				[]
+
+			o.watchFileExclude = Array.isArray(fileApp.watchFileExclude) ? fileApp.watchFileExclude.map(makeString) :
+				[]
+
 			o.watchCopy = {}
-			for (var dest in fileApp.watchCopy) {
+			for (var dest in fileApp.watchCopy)
 				o.watchCopy[
 					path.resolve(o.folder, String(dest))] =
 					path.resolve(o.folder, String(fileApp.watchCopy[dest]))
-			}
+
 			o.signal = fileApp.signal != null ? !!fileApp.signal : appLoaderOpts.signal
+
 			if (fileApp.launchBrowser && !appLoaderOpts.launchedBrowser) launchBrowser = fileApp.launchBrowser
 
 			return o
+		}
+
+		function makeString(v) {
+			return String(v)
+		}
+
+		function makeStringOrRegExp(v) {
+			return v instanceof RegExp ? v : String(v)
 		}
 	}
 }
