@@ -2,6 +2,7 @@
 // Invoke a function on a certain schedule
 // © Harald Rudell 2013 MIT License
 
+var anytimer = require('./anytimer')
 var linearcalendar = require('./linearcalendar')
 // http://nodejs.org/api/util.html
 var util = require('util')
@@ -72,8 +73,7 @@ function TimeEmitter(opts) {
 		if (timer) {
 			var t = timer
 			timer = null
-			if (isTimeout) clearTimeout(t)
-			else clearInterval(t)
+			t.clear()
 		}
 	}
 	this.getState = function getState() {
@@ -117,7 +117,7 @@ function TimeEmitter(opts) {
 				var inPeriod = lastTimerSet % periodTimeval // time elapsed in current epoch-based period
 				var atTime = (opts.at % periodTimeval) * period.atUnit // at time in each period
 				var timeLeft = atTime - inPeriod // time left to the next at time in this period
-				if (timeLeft < 0) timeLeft += periodTimeval // it's passed, go to the next period
+				if (timeLeft <= 0) timeLeft += periodTimeval // it's passed, go to the next period
 				lastTimeval = timeLeft
 			} else lastTimeval = periodTimeval
 			break
@@ -130,7 +130,7 @@ function TimeEmitter(opts) {
 			var period1 = linearcalendar.getTimeval(ymPeriodStart + ymPeriod)
 			var period2 = linearcalendar.getTimeval(ymPeriodStart + 2 * ymPeriod)
 			var atLeft = period0 + opts.at * period.atUnit - lastTimerSet
-			if (atLeft < 0) {
+			if (atLeft <= 0) {
 				var nextAt = period1 + opts.at * period.atUnit
 				if (nextAt >= period2) nextAt = period2 - time1day
 				atLeft = nextAt - lastTimerSet
@@ -156,7 +156,7 @@ function TimeEmitter(opts) {
 			break
 		}
 		// rig the timer
-		timer = (isTimeout = !isInterval) ? setTimeout(fire, lastTimeval) : setInterval(fire, lastTimeval)
+		timer = new anytimer.AnyTimer(fire, lastTimeval, isTimeout = !isInterval)
 	}
 }
 util.inherits(TimeEmitter, events.EventEmitter)
