@@ -67,7 +67,7 @@ function RotatedStream(opts) {
 	if (!e) {
 		this.writable = true
 		periodTimer = new perioder.TimeEmitter(opts.rotating || defaults.rotating)
-			.on('time', rotate)
+			.on('time', rotateTimer)
 	} else process.nextTick(function () {
 			emitError(e)
 		})
@@ -94,7 +94,10 @@ function RotatedStream(opts) {
 			else {
 				didCb = true
 				stream.write.apply(stream, args)
-				if (stream.bytesWritten > maxBytesWritten) rotate()
+				if (stream.bytesWritten > maxBytesWritten) {
+					//** stream.write('rotateSize')
+					rotate()
+				}
 			}
 		}
 		if (!didCb) {
@@ -103,12 +106,19 @@ function RotatedStream(opts) {
 		}
 	}
 
+	function rotateTimer() {
+		//** if (self.writable) stream.write('rotatedTimer')
+		rotate()
+	}
 	// rotate the log
 	function rotate(cb) {
+		var retryCount
+		var newName
+
 		if (self.writable && didWrite && !rotating) { // we wrote something to the log, and are not in process of rotating
 			rotating = true
-			var retryCount = 0
-			var newName = getRotatedName()
+			retryCount = 0
+			newName = getRotatedName()
 			fs.stat(newName, doesNewNameExist) // see if the new filename already exist
 		} else end()
 
@@ -125,6 +135,7 @@ function RotatedStream(opts) {
 		}
 
 		function retry() {
+			//** stream.write('retry')
 			if (self.writable) {
 				newName = getRotatedName()
 				fs.stat(newName, doesNewNameExist) // see if the new filename already exist
@@ -146,6 +157,7 @@ function RotatedStream(opts) {
 		}
 
 		function flushBuffer(err) {
+			//** stream.write('flushBuffer')
 			buffer = null
 			rotating = false
 			end(err)
@@ -167,7 +179,7 @@ function RotatedStream(opts) {
 			var p = periodTimer
 			periodTimer = null
 			p.cancel()
-			p.removeListener('time', rotate)
+			p.removeListener('time', rotateTimer)
 		}
 		closeStream(null, cb)
 	}
