@@ -1,3 +1,4 @@
+2013-02-01 0.3.3 Log periods over 24 days work, refactored file-data conversion
 2013-01-28 0.3.2 remove debug
 2013-01-25 0.3.1 Node God as four processes, rotates log on size and time, License, ChangeLog
 2013-01-20 0.3.0 Node God as four processes, rotates log on size and time, License, ChangeLog
